--- a/AgendaDeContatosMVC/Views/Usuarios/FormCadastro.cshtml
+++ b/AgendaDeContatosMVC/Views/Usuarios/FormCadastro.cshtml
@@ -25,6 +25,9 @@
       <input type="email" class="form-control" placeholder="Email" name="Email">
     </div>
     <div class="col">
+      <input type="text" class="form-control" placeholder="85 9999..." name="CellNumber">
+    </div>
+    <div class="col">
       <input type="password" class="form-control" placeholder="Senha" name="Senha">
     </div>
     <div class="col">
