--- a/AgendaDeContatosMVC/Views/Usuarios/UserList.cshtml
+++ b/AgendaDeContatosMVC/Views/Usuarios/UserList.cshtml
@@ -1,5 +1,6 @@
 @model List<AgendaDeContatosMVC.Models.Usuarios>;
 
+
 @{
 
     ViewData["Title"] = "Lista de Usuarios";
@@ -7,20 +8,38 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<thead>
-    <tr>
-        <th>IdUsuario</th>
-        <th>Nome</th>
-        <th>Email</th>
-    </tr>
-</thead>
-<tbody>
-    @foreach(var usuario in Model) {
+<h2>Desativar Usuarios</h2>
 
+<form action="http://localhost:5188/Usuarios/ParcialUpdate" method="update">
+  <table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col">Nome</th>
+      <th scope="col">Email</th>
+      <th scope="col">CellNumber</th>
+       <th scope="col">Ativo</th>
+    </tr>
+  </thead>
+  <tbody>
+    @foreach (var usuarios in Model) {
         <tr>
-            <th>@usuario.IdUsuario</th>
-            <th>@usuario.Nome</th>
-            <th>@usuario.Email</th>
+            <th scope="row"><input type="number" name="IdUsuario" value=@usuarios.IdUsuario disabled></th>
+            <th scope="row">@usuarios.Email</th>
+            <th scope="row">@usuarios.Nome</th>
+            <th scope="row">@usuarios.CellNumber</th>
+            <th scope="row">
+             @if (@usuarios.Ativo == "on") {
+
+                <input type="checkbox" checked name="Ativo">
+             } else {
+
+                <input type="checkbox" name = "Ativo">
+             }
+            </th>
         </tr>
     }
-</tbody>
+  </tbody>
+</table>
+<button type="submit" class="btn btn-success">Atualizar</button>
+</form>
